Changelog. A lot less detailed than usual, at least for past
	history.
2019/05/27: Fix matrix generation.	
2019/05/20: Change checks on vectors	
2019/05/05: Reworked linmap internals	
2019/04/15: Improved sphalo and test programs printout	
2019/04/09: bump version to 3.6.1
2019/04/09: new fnd_owner_halo method
2019/03/31: New RENUM_BLK descriptor method	
2019/01/16: In bldext, implement ALL_TO_ALLV by hand for certain
	compilers. 
2018/10/10: New ICTXT argument in prec%init
2018/07/30: Improved implementations for TRIL/TRIU	
2018/04/15: Fix internals to have tmp_ovrlap in local indexing. Change
	default in CDALL with VL to no global checks. 	
2018/03/22: Fix defaults for matrix/vector internals	
2018/02/03: Accept 'GMRES' as synonim with 'RGMRES'.	
2018/11/23: Reimplement hash function. 	
2018/10/10: new ICTXT argument to prec%init method.
2018/09/04: Modified vector class get_vect method
2018/08/10: Optional arguments in GETROW method. 	
2018/07/30: Improved TRIL/TRIU implementations. 	
2018/06/14: New FCG code. 	
2018/04/23: Change default for CDALL with VL. New GLOBAL argument for
	reductions. 	
2018/04/15: Fixed pargen benchmark programs. Made MOLD mandatory.
2018/01/10: Updated docs.	
2017/12/15: Fixed preconditioner build.
2017/10/31: Updated target install directories.
2017/10/15: Fold genpde into examples for readability.
2017/10/02: Merged CBinding. 	
2017/09/30: Fixes for README, contributors, bug reporting address.
2017/08/09: New optional args to TRIL and TRIU to produce two output
	matrices at once. 	
2017/07/20: Fixes to genpde_impl. Fixed bug in matdist with BLOCK.	
2017/04/28: Further development of CBIND branch.	
2017/04/25: Fix configure for MKL.	
2017/04/10: Makefile fixes.	
2017/04/09: Remove all remaining .F files, and remove configure checks for
	F77. Define version 3.5.0. Fixed INTENT in preconditioners.
2017/04/08: All PREC methods now invoked through preconditioner object. 	
2017/04/05: make ISO_C_BINDING and MOVE_ALLOC mandatory prereq. 